tests/errors/syn.missing-colon.break-or-continue.or
main :: () -> void {
    do:mylabel {
        continue:;
    };
};